# mina-types-generator

./: Cargo.toml  README.md
src/: doc.rs  eval.rs  gen.rs  lib.rs  select.rs  shape.rs  visit.rs  xref.rs
tests/: complex-types.rs  error-duplicate-names.rs  error-record-reference.rs  error-snapp-acc.rs  gen_utils.rs  inner-type.rs  rec-app.rs  top-app.rs  type-aliases.rs  types.rs  unused-parameter-error.rs  utils.rs  versioned.rs
tests/files/complex-types/: collection.rs  collection.shape  item.shape  poly.rs  poly.shape
tests/files/inner-type/: inner-type.rs  pending-coinbase-stack-state.shape  stack-versioned.shape
tests/files/rec-app/: pending-coinbase.shape  rec-app.rs  tree.rs
tests/files/versioned/: sgn.rs  sgn.shape
